padding and margin added and subtracted to ensure all elements align throughout the page

--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,6 @@
     box-sizing: border-box;
     font-family: $font-body;
     color: $color-secondary;
-    background-color: $color-primary;
 }
 
 a:link,
@@ -23,7 +22,7 @@ a:visited {
 
     img{
         width: 190px;
-        margin-left: 10px;
+        margin-left: 20px;
     }
     
     .login-button {
@@ -39,7 +38,7 @@ a:visited {
         border: 1px solid $color-secondary;
         border-radius: 5px;
         padding: 12px 20px 30px 20px;
-        margin-right: 25px;
+        margin-right: 40px;
 
         background-color: $color-primary;
         color: $color-secondary;
@@ -56,9 +55,9 @@ a:visited {
         
         .title {
             font-family: $font-body;
-            font-size: 30px;
+            font-size: 25px;
             font-weight: bolder;
-            margin: 15px 50px 30px 50px;
+            margin: 0px 60px 30px 60px;
             color: $color-secondary-light;
         }
 
@@ -82,7 +81,7 @@ a:visited {
 
         p {
             font-size: 15px;
-            margin: 30px 40px 30px 40px;
+            margin: 30px 40px 45px 40px;
         }
 
         .button {
@@ -92,11 +91,9 @@ a:visited {
 
     h4 {
         font-family: $font-display;
+        font-size: 20px;
+        margin: 45px 40px -1px 40px;
         color: $color-secondary;
-        font-size: 25px;
-        margin: 20px;
-        margin-bottom: -1px;
-       
     }
 }
 
@@ -159,20 +156,24 @@ a:visited {
     }
 
     .button {
-        margin: 0 auto;
+        margin-bottom: 60px;
     }
 
 }
 
 .button {
     display: block;
-    width: 200px;
-    height: 100px;
-    font-size: 30px;
+    width: 180px;
+    height: 0px;
+
+    font-size: 15px;
+    font-weight: bolder;
     text-align: center;
-    padding: 28px 10px;
+
+
     border: 2px solid $color-secondary;
-    border-radius: 20px;
+    border-radius: 5px;
+    padding: 10px 0px 30px 0px;
     background-color: $color-secondary;
     color: $color-primary;
 }
@@ -181,6 +182,10 @@ a:visited {
     background-color: $color-primary-light;
     text-align: center;
     color: $color-secondary;
+    border-color: $color-primary-light;
 
-    padding: 20px;
+    p {
+        padding: 20px 20px 20px 20px;
+        margin: -25px;
+    }
 }
